--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Koushyar",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "morgan": "^1.10.0"
   }
 }
