--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Koushyar",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^4.16.4",
     "morgan": "^1.10.0"
   }
