Connecting Our Database with the Express App + Creating a Simple Tour Model + Creating Documents and Testing the Model

--- a/config.env
+++ b/config.env
@@ -1,4 +1,14 @@
 NODE_ENV=development
 PORT=4000
 USERNAME=koushyar
-PASSWORD=123456
+DATABASE_PASSWORD=Yak6CZjEbujX8sxN
+DATABASE=mongodb+srv://koushyar:<PASSWORD>@cluster0.ppxw0.mongodb.net/natours?retryWrites=true
+DATABASE_LOCAL=mongodb://localhost:27017/natours-test
+
+# 
+
+# koushyar
+
+# mongodb+srv://koushyar:Yak6CZjEbujX8sxN@cluster0.ppxw0.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+# mongodb+srv://koushyar:Yak6CZjEbujX8sxN@cluster0.ppxw0.mongodb.net/
