--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.16.4",
+    "mongoose": "^5.5.2",
     "morgan": "^1.10.0"
   }
 }
